--- a/HyperAutomation.ControlRoom/Client/HyperAutomation.ControlRoom.Client.csproj
+++ b/HyperAutomation.ControlRoom/Client/HyperAutomation.ControlRoom.Client.csproj
@@ -5,6 +5,7 @@
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'HyperAutomation.ControlRoom' " />
   <ItemGroup>
     <Compile Remove="wwwroot\css\customcss\**" />
     <Content Remove="wwwroot\css\customcss\**" />
