--- a/HyperAutomation.ControlRoom/Server/HyperAutomation.ControlRoom.Server.csproj
+++ b/HyperAutomation.ControlRoom/Server/HyperAutomation.ControlRoom.Server.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.6" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.9">
       <PrivateAssets>all</PrivateAssets>
@@ -16,6 +17,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -63,8 +65,14 @@
     <Watch Remove="Migrations\20210922000111_one.Designer.cs" />
     <Watch Remove="Migrations\20210922001524_one.cs" />
     <Watch Remove="Migrations\20210922001524_one.Designer.cs" />
-    <Watch Remove="Migrations\20210922002120_one.cs" />
-    <Watch Remove="Migrations\20210922002120_one.Designer.cs" />
+    <Watch Remove="Migrations\20210929181735_one.cs" />
+    <Watch Remove="Migrations\20210929181735_one.Designer.cs" />
+    <Watch Remove="Migrations\20210929182214_one.cs" />
+    <Watch Remove="Migrations\20210929182214_one.Designer.cs" />
+    <Watch Remove="Migrations\20210929183834_one.cs" />
+    <Watch Remove="Migrations\20210929183834_one.Designer.cs" />
+    <Watch Remove="Migrations\20210930005857_two.cs" />
+    <Watch Remove="Migrations\20210930005857_two.Designer.cs" />
     <Watch Remove="Utils\HttpContextExtensions.cs" />
     <Watch Remove="Utils\QueryableExtensions.cs" />
   </ItemGroup>
